correction mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -525,6 +525,9 @@ h3 {
     order: 2;
     padding-top: 16px;
   }
+  .mobile-text p {
+    letter-spacing: -0.3px;
+  }
 }
 .font-size-15 {
   font-size: 15px;
