--- a/src/scss/index/mobile.scss
+++ b/src/scss/index/mobile.scss
@@ -65,5 +65,9 @@
     max-width: 575px;
     order: 2;
     padding-top: 16px;
+
+    & p {
+      letter-spacing: -0.3px;
+    }
   }
 }
